fix(agenda): Le bouton "quitter" est mieux visible en mode sombre
En mode sombre, lorsque l'on créer un évènement, le bouton quitter en haut à droite (la croix) n'avait pas la bonne couleur.

--- a/plugins/mel_metapage/skins/elastic/less/modal.less
+++ b/plugins/mel_metapage/skins/elastic/less/modal.less
@@ -74,6 +74,7 @@
             html.dark-mode &{
                 background-color: var(--invisible)!important;
                 border-color: var(--invisible)!important;
+                color:#e2e8e9;
             }
 
             &:focus{
